[gd_scene load_steps=8 format=3 uid="uid://cajxkmuakcb02"]

[ext_resource type="Texture2D" uid="uid://d8w6smwa26vb" path="res://graphics/enemies/scout.png" id="1_b270d"]
[ext_resource type="Script" path="res://scenes/enemies/Scout/scout.gd" id="1_novpm"]
[ext_resource type="Shader" path="res://scenes/enemies/Scout/scout.gdshader" id="2_spxc4"]
[ext_resource type="AudioStream" uid="uid://cxgx4fl1ty2vf" path="res://audio/solid_impact.ogg" id="4_ucu4u"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cvrt1"]
shader = ExtResource("2_spxc4")
shader_parameter/color = Color(0.835294, 0.921569, 1, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6x10w"]
radius = 53.0848

[sub_resource type="CircleShape2D" id="CircleShape2D_qw78q"]
radius = 1081.0

[node name="Scout" type="CharacterBody2D" groups=["Entity", "Scouts"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_novpm")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_cvrt1")
position = Vector2(34, 0)
rotation = 1.5708
texture = ExtResource("1_b270d")
region_enabled = true
region_rect = Rect2(13.18, 14.9759, 151.753, 202.23)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6x10w")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_qw78q")

[node name="LaserSpawnPosition" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPosition"]
position = Vector2(114, -26)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPosition"]
position = Vector2(119, 12)

[node name="Timers" type="Node" parent="."]

[node name="LaserTimer" type="Timer" parent="Timers"]

[node name="HitTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ucu4u")

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Timers/LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="Timers/HitTimer" to="." method="_on_hit_timer_timeout"]
